--- a/plovrConfig.json
+++ b/plovrConfig.json
@@ -1,13 +1,13 @@
 {
-	"id": "remobid",
-	"paths": ["src","../c4ms/closure/Library/third_party/closure/goog"],
+	"id": "rb-unit-tests",
+	"paths": ["src", "test", "../c4ms/closure/Library/third_party/closure/goog"],
 	"closure-library" : "../c4ms/closure/Library/closure/goog/",
 	"mode" : "ADVANCED",
 	"level" : "VERBOSE",
 	"pretty-print" : false,
 	"output-charset": "UTF-8",
-    "inputs" : ["test/unit/common/storage/localstorage.js", "test/browser/common/storage/localstorage.js"],
-    "output-file" : "test/browser/common/storage/localstorage_c.js",
+    "inputs" : ["test/unit/common/cache/localcache.js", "test/unit/common/storage/localstorage.js"],
+    "output-file" : "test/allUnitTests.js",
     "experimental-compiler-options": {
         "sourceMapFormat": "V3"
     },
