--- a/plovrConfig.json
+++ b/plovrConfig.json
@@ -1,12 +1,17 @@
 {
 	"id": "rb-unit-tests",
-	"paths": ["src", "test", "../c4ms/closure/Library/third_party/closure/goog"],
-	"closure-library" : "../c4ms/closure/Library/closure/goog/",
+	"paths": ["src", "test", "deps/closure-library/third_party/closure/goog"],
+	"closure-library" : "deps/closure-library/closure/goog/",
 	"mode" : "ADVANCED",
 	"level" : "VERBOSE",
 	"pretty-print" : false,
 	"output-charset": "UTF-8",
-    "inputs" : ["test/unit/common/cache/localcache.js", "test/unit/common/storage/localstorage.js"],
+    "inputs" : [
+        "test/unit/common/net/restmanager.js",
+        "test/unit/common/cache/localcache.js",
+        "test/unit/common/storage/localstorage.js",
+        "test/unit/common/storage/rest.js"
+    ],
     "output-file" : "test/allUnitTests.js",
     "experimental-compiler-options": {
         "sourceMapFormat": "V3"
